# PixelTagger

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  creenshots"
.agents/skills/enforce-pixeltagger-mvvm/: SKILL.md
.agents/skills/enforce-pixeltagger-mvvm/agents/: openai.yaml
.agents/skills/enforce-pixeltagger-mvvm/references/: mvvm-architecture-guideline.md
docs/: annotation-category-edit-team-handoff.md  experiment-report-mid.md  experiment-report.md  image-processing-team-handoff..md  mvvm.md  yolo-export-team-handoff.md
docs/finalreport/: PixelTagger项目成果与总结.md  REPORT_INPUTS.md  SCREENSHOT_CHECKLIST.md  export_report.ps1
docs/finalreport/assets/: README.md
docs/report/: PixelTagger项目成果与总结.md  REPORT_INPUTS.md  SCREENSHOT_CHECKLIST.md
docs/report/assets/: README.md  textPicture.json
src/: main.cpp
src/app/: Application.cpp  Application.h
src/common/: ICommandBase.h  TupleCommand.h
src/common/presentation/: AnnotationRenderData.h  AnnotationRenderItem.h  AnnotationViewData.h  LabelPresentationData.h  LabelViewData.h
src/common/types/: Result.h  ViewModelChange.h
src/exporter/: YoloExporter.cpp  YoloExporter.h
src/model/: AnnotationModel.h  ImageModel.h  LabelModel.h  ProjectModel.cpp  ProjectModel.h  Types.h
src/processor/: ImageConverter.cpp  ImageConverter.h  ImageProcessor.cpp  ImageProcessor.h
src/repository/: JsonProjectRepository.cpp  JsonProjectRepository.h
src/service/: ImageImportService.cpp  ImageImportService.h
src/view/: ImageCanvas.cpp  ImageCanvas.h  MainWindow.cpp  MainWindow.h
src/view/canvas/: CoordinateMapper.cpp  CoordinateMapper.h  ImageCanvas.cpp  ImageCanvas.h
src/viewmodel/: AnnotationViewData.h  AnnotationViewModel.cpp  AnnotationViewModel.h  ImageViewModel.cpp  ImageViewModel.h  LabelViewModel.cpp  LabelViewModel.h  ProcessViewModel.cpp  ProcessViewModel.h  ProjectViewModel.cpp  ProjectViewModel.h
tests/: ModelViewModelTests.cpp  TestFixtures.h
tests/annotation/: AnnotationEditingTests.cpp
tests/exporter/: YoloExporterTests.cpp
tests/model/: ProjectModelLabelTests.cpp
tests/processor/: ImageProcessorTests.cpp
tests/view/: ImageCanvasInteractionTests.cpp  MainWindowAnnotationTests.cpp
tests/viewmodel/: MultiLabelViewModelTests.cpp  ProcessViewModelTests.cpp  ProjectExportViewModelTests.cpp
